# MyRobotArm-stepperMotor

./: .mxproject  CMakeLists.txt  RobotArm_Architecture_Design.md  WorkLog.md  stepperMotorDriver.ioc
App/: CmakeLists.txt
App/Applications/: CmakeLists.txt
App/Applications/Inc/: calibrator.hpp  com_uart.hpp  control_config.h  controller.hpp  current_tracker.hpp  dce.hpp  encoder.hpp  motor.hpp  motor_config.hpp  move_reconstructor.hpp  packet.h  packet_handler.hpp  pid.hpp  position_tracker.hpp  protocol.h  sin_map.h  speed_tracker.hpp
App/Applications/Src/: calibrator.cpp  calibrator_test.cpp  control_test.cpp  controller.cpp  current_tracker.cpp  dce.cpp  main.cpp  motor.cpp  move_reconstructor.cpp  packet_handler.cpp  packet_test.cpp  pid.cpp  position_tracker.cpp  speed_tracker.cpp  test.cpp
App/Drivers/: CmakeLists.txt
App/Drivers/Inc/: button.hpp  driver_config.h  mt6816.hpp  tb67H450.hpp
App/Drivers/Src/: button.cpp  main.cpp  mt6816.cpp  tb67h450.cpp  test.cpp
App/Peripherals/: CmakeLists.txt
App/Peripherals/Inc/: adc.hpp  dma.hpp  generic_gpio.hpp  input_gpio.hpp  peripheral_config.h  pwm.hpp  soft_eeprom.hpp  spi.hpp  timer.hpp  uart_dma.hpp
App/Peripherals/Src/: adc.cpp  dma.cpp  generic_gpio.cpp  gpio.cpp  input_gpio.cpp  main.cpp  peripheral_test.cpp  pwm.cpp  soft_eeprom.cpp  spi.cpp  timer.cpp  uart_dma.cpp
Core/Inc/: adc.h  can.h  dma.h  gpio.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  stockpile_f103cb.h  sysInit.h  tim.h  usart.h  utils.h
Core/Src/: adc.c  can.c  dma.c  gpio.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stockpile_f103cb.c  sysInit.c  tim.c  usart.c  utils.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
